style: fix gap in header

--- a/src/style/layouts/_header.scss
+++ b/src/style/layouts/_header.scss
@@ -33,7 +33,7 @@
       top: 0rem;
       background: $dark-bg-color;
 
-      clip-path: polygon(0% 0%, 100% 0%, 93% 100%, 7% 100%);
+      clip-path: polygon(0% 0%, 100% 0%, 93.5% 100%, 6.5% 100%);
     }
     &-item {
       position: relative;
